--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "author": "CodeRoad",
   "license": "MIT",
-  "dependencies": {
-    "lodash-es": "^4.17.15"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
